# Datamining-Project

./: Makefile  README.MD  pyproject.toml
notebooks/: 01_data_overview.ipynb  02_preprocessing_and_features.ipynb  03_kmeans_selection.ipynb  04_cluster_analysis_and_visualization.ipynb
src/spotify_clustering/: main.py
src/spotify_clustering/process/: clustering.py  evaluation.py  preprocessing.py
